# src/api/swagger.yaml
@@ -173,3 +173,22 @@ paths:
           description: Successful response
           content:
             application/json: {}
+  /get/ref_claim/:
+    post:
+      tags:
+        - default
+      summary: /get/ref_claim/
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              properties:
+                username:
+                  type: string
+                  example: antonprox
+                  required: true
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json: {}
